# rust_zhi_enum

./: Cargo.toml  LICENSE  README.md
primitive_enum/: Cargo.toml
primitive_enum/src/: lib.rs
primitive_enum/tests/: test.rs
primitive_enum_macro/: Cargo.toml
primitive_enum_macro/src/: discriminant.rs  lib.rs
zhi_enum/: Cargo.toml
zhi_enum/src/: lib.rs
zhi_enum/tests/: test.rs
zhi_enum_derive/: Cargo.toml
zhi_enum_derive/src/: discriminant.rs  lib.rs
