[package]
name = "primitive_enum_macro"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# Compatibility test
num_enum = "0.5.1"
