[package]
name = "zhi_enum"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
description = "derive macros to easily use enum"
repository = "https://github.com/Kxuan/rust_zhi_enum"

[lib]

[dependencies]
zhi_enum_derive = { version = "0.1.0", path = "../zhi_enum_derive" }


[dev-dependencies]
# Compatibility test
num_enum = "0.5.1"
