[package]
name = "zhi_enum_derive"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
description = "derive macros to easily use enum"
repository = "https://github.com/Kxuan/rust_zhi_enum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# Compatibility test
num_enum = "0.5.1"
